Add csrf token verification

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -64,6 +64,8 @@
 					</label>
 				</div>
 
+                {{> "lib/components/csrfInput"}}
+
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary"/>
                 </div>
