--- a/views/administration/classes-manage.hbs
+++ b/views/administration/classes-manage.hbs
@@ -12,6 +12,7 @@
         <section class="section-classes-manage">
             <form class="manage-form" method="post" action="">
                 {{> "administration/forms/form-classes-manage"}}
+                {{> "lib/components/csrfInput"}}
             </form>
         </section>
     {{/content}}
