--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -38,7 +38,7 @@
                         <a class="btn btn-block btn-secondary btn-hide-providers">Mit {{theme.title}} Account anmelden</a>
                     </div>
                 </div>
-
+                {{> "lib/components/csrfInput"}}
                 <div class="form-group">
                     <input type="submit" name="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" data-testid="submit-login" />
                 </div>
