--- a/views/lib/components/modal-form.hbs
+++ b/views/lib/components/modal-form.hbs
@@ -15,6 +15,8 @@
 
                 {{#block "additional-actions"}}{{/block}}
 
+                {{> "lib/components/csrfInput"}}
+
                 <button type="submit" class="btn btn-primary btn-submit">
                     {{submitLabel}}
                 </button>
