--- a/views/lib/forms/paginatedForm.hbs
+++ b/views/lib/forms/paginatedForm.hbs
@@ -15,6 +15,8 @@
 		{{#block "panels"}}{{/block}}
 	</div>
 
+	{{> "lib/components/csrfInput"}}
+
 	{{#block "buttons"}}{{/block}}
 	<button id="prevSection" class="btn btn-secondary" type="button" disabled="disabled">Zurück</button>
 	{{#if isIE}}
