--- a/views/administration/classes-edit.hbs
+++ b/views/administration/classes-edit.hbs
@@ -14,6 +14,7 @@
         <section class="section-classes-create">
             <form class="create-form" method="post" action="">
                 {{> "administration/forms/form-classes-edit"}}
+                {{> "lib/components/csrfInput"}}
             </form>
         </section>
     {{/content}}
