--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -22,9 +22,9 @@
 
                         <div class="form-group">
                             <label>Name der Schule</label>
-                            <input value="{{../school.name}}" type="text" class="form-control" name="name" placeholder="Einhorn Gymnasium"
-                                {{#if ../schoolUsesLdap}} readonly{{/if}} {{#if ../isExpertSchool}} readonly{{/if}}
-                                required />
+                            <input value="{{../school.name}}" type="text" class="form-control" name="name"
+                                placeholder="Einhorn Gymnasium" {{#if ../schoolUsesLdap}} readonly{{/if}}
+                                {{#if ../isExpertSchool}} readonly{{/if}} required />
                         </div>
 
                         <div class="form-group">
@@ -39,10 +39,13 @@
 
                         <div class="form-group">
                             <label>
-                                <input type="checkbox" name="rocketchat" value="true" {{#inArray "rocketChat" ../school.features}}checked{{/inArray}}>
+                                <input type="checkbox" name="rocketchat" value="true"
+                                    {{#inArray "rocketChat" ../school.features}}checked{{/inArray}}>
                                 Chatfunktion aktivieren
-                                <p class="text-muted">Durch Ihren Klick auf „Chatfunktion aktivieren“ bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator und befugt sind,
-                                die Chat-Funktion für Ihre Schule freizuschalten. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
+                                <p class="text-muted">Durch Ihren Klick auf „Chatfunktion aktivieren“ bestätigen Sie,
+                                    dass Sie weisungsberechtigter Schul-Administrator und befugt sind,
+                                    die Chat-Funktion für Ihre Schule freizuschalten. Ihr Klick gilt insofern als
+                                    Weisung der Schule gegenüber dem HPI.</p>
                             </label>
                         </div>
 
@@ -51,8 +54,11 @@
                             <label>Cloud-Storage Anbieter</label>
                             <select name="fileStorageType" type="text">
                                 {{#each ../provider}}
-                                <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}} </option>
-                                    {{/each}} </select> </div> {{/if}} <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
+                                <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}}
+                                </option>
+                                {{/each}} </select> </div> {{/if}}
+                        {{> "lib/components/csrfInput"}}
+                        <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
                     </form>
 
                     {{#if ../school.fileStorageType}}
@@ -71,15 +77,21 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 no-padding">
-                    <form action="/administration/schools/{{currentSchool}}/bucket" method="post" class="edit-form-school">
+                    <form action="/administration/schools/{{currentSchool}}/bucket" method="post"
+                        class="edit-form-school">
 
                         <div class="form-group">
                             <label>Cloud-Storage Anbieter</label>
                             <select name="fileStorageType" type="text">
                                 <option disabled="disabled" selected="selected">Anbieter auswählen</option>
                                 {{#each provider}}
-                                <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}} </option>
-                                    {{/each}} </select> </div> <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
+                                <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}}
+                                </option>
+                                {{/each}}
+                            </select> </div>
+
+                        {{> "lib/components/csrfInput"}}
+                        <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
 
                     </form>
                 </div>
@@ -102,6 +114,7 @@
                             System hinzufügen
                         </button>
                         {{#if ldapAddable}}
+                        {{> "lib/components/csrfInput"}}
                         <button type="submit" class="btn btn-primary">
                             LDAP System hinzufügen
                         </button>
