--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -197,6 +197,8 @@
                         {{closeLabel}}
                     </button>
 
+                    {{> "lib/components/csrfInput"}}
+
                     <button type="submit" class="btn btn-primary btn-submit">
                         {{submitLabel}}
                     </button>
