--- a/views/courses/edit-courseGroup.hbs
+++ b/views/courses/edit-courseGroup.hbs
@@ -51,6 +51,8 @@
                         {{closeLabel}}
                     </button>
 
+                    {{> "lib/components/csrfInput"}}
+
                     <button type="submit" class="btn btn-primary btn-submit">
                         {{submitLabel}}
                     </button>
