--- a/views/files/file-upload.hbs
+++ b/views/files/file-upload.hbs
@@ -5,6 +5,7 @@
                 <div class="dz-default dz-message" data-dz-message="">
                     <span><i class="fa fa-cloud-upload dz-clickable"></i> Dateien zum Hochladen ablegen.</span>
                 </div>
+                {{> "lib/components/csrfInput"}}
             </form>
             <div class="progress-bar">
                 <div class="progress">
