--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -193,7 +193,7 @@
                         <button class="btn btn-add btn-secondary btn-cancel">
                             {{closeLabel}}
                         </button>
-
+                        {{> "lib/components/csrfInput"}}
                         <button type="submit" class="btn btn-primary btn-submit">
                             {{submitLabel}}
                         </button>
