--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -80,6 +80,7 @@
   {{/if}}
 
     {{#if @root.submittable}}
+        {{> "lib/components/csrfInput"}}
         {{#userHasPermission "HOMEWORK_CREATE"}}
             <button type="submit" class="btn btn-primary btn-submit js-submit-btn" disabled="true">Speichern</button>
         {{/userHasPermission}}
