--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -16,6 +16,7 @@
 		Mit Node, React und Feathers verknüpfst du eher die Sprache Javascript als Englisch? Du suchst ein junges Team, lockere Atmosphäre und flache Hierarchien? Dann schau dir unsere Stellen an: https://schul-cloud.org/community#jobs
 	-->
     {{#block "meta"}}
+        <meta name="csrfToken" content="{{csrfToken}}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="#b10438">
