--- a/views/pwRecovery/pwrecovery.hbs
+++ b/views/pwRecovery/pwrecovery.hbs
@@ -40,6 +40,7 @@
                                         <input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" title="{{> "lib/forms/password-hint" plaintext=true}}" required>
                                     </div>
 
+                                    {{> "lib/components/csrfInput"}}
 
                                     <input type="submit" class="btn btn-primary btn-block" value="{{buttonLabel}}" />
                                 </form>
