--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -49,7 +49,7 @@
                     <button type="button" class="btn btn-secondary btn-cancel">
                         {{closeLabel}}
                     </button>
-
+                    {{> "lib/components/csrfInput"}}
                     <button type="submit" class="btn btn-primary btn-submit">
                         {{submitLabel}}
                     </button>
