Fix missing csrf token in modal

--- a/views/lib/components/csrfInput.hbs
+++ b/views/lib/components/csrfInput.hbs
@@ -1,1 +1,1 @@
-<input type="hidden" name="_csrf" value="{{csrfToken}}">
+<input type="hidden" data-force-value="true" name="_csrf" value="{{csrfToken}}">
