--- a/views/oauth2/consent.hbs
+++ b/views/oauth2/consent.hbs
@@ -27,6 +27,7 @@
                                             {{/each}}
                                         </ul>
                                     </div>
+                                    {{> "lib/components/csrfInput"}}
                                     <input type="submit" class="btn btn-primary btn-block" value="{{buttonLabel}}" />
                                 </form>
                             </div>
