--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -60,6 +60,8 @@
 								{{closeLabel}}
 							</button>
 
+							{{> "lib/components/csrfInput"}}
+
 							<button type="submit" class="btn btn-primary btn-submit">
 								{{submitLabel}}
 							</button>
