should work now. added error message, styled modal and added right checks in files grid

--- a/views/files/forms/form-virus-danger.hbs
+++ b/views/files/forms/form-virus-danger.hbs
@@ -2,6 +2,7 @@
 .danger-icon {
     color: #ff1134;
     font-size: 80px;
+    margin-bottom: 30px;
 }
 </style>
 
@@ -11,5 +12,6 @@
             <i class="fa fa-exclamation-triangle danger-icon"></i>
         </div>
     </div>
-    <p>Danger</p>
+    <p>Unsere Prüfung hat ergeben, dass diese Datei schädlichen Inhalt enthalten könnte. Bitte überprüfe die Datei. </p>
+    <p>Keine Sorge, die Datei kann nicht heruntergeladen werden.</p>
 </div>
