--- a/views/files/forms/form-virus-danger.hbs
+++ b/views/files/forms/form-virus-danger.hbs
@@ -12,6 +12,6 @@
             <i class="fa fa-exclamation-triangle danger-icon"></i>
         </div>
     </div>
-    <p>Unsere Prüfung hat ergeben, dass diese Datei schädlichen Inhalt enthalten könnte. Bitte überprüfe die Datei. </p>
+    <p>Oha! Wir haben in dieser Datei möglicherweise schädlichen Inhalt entdeckt.</p>
     <p>Keine Sorge, die Datei kann nicht heruntergeladen werden.</p>
 </div>
